# aemo-energy-dashboard2

./: .env.example  .env.sample  .gitignore  30_MINUTE_INTEGRATION_PLAN.md  BACKFILL_SCADA30_PLAN.md  CACHING_AND_MULTIUSER_STRATEGY.md  CACHING_IMPLEMENTATION_PLAN_REVISED.md  CLAUDE.local.md  CLAUDE.md  CLAUDE_PRICETAB.md  CLAUDE_Smoothing.md  CLAUDE_startup.md  CODE_INVENTORY.md  CRITICAL_FIXES_MASTER_SUMMARY.md  CURTAILMENT_RATE_ISSUE.md  DASHBOARD_CREATION_OPTIMIZATION_PLAN.md  DASHBOARD_DATA_ACCESS_AUDIT.md  DASHBOARD_HANG_FIX.md  DASHBOARD_STRUCTURE_ANALYSIS.md  DEPLOYMENT.md  DIMENSION_NAME_SOLUTION.md  DISK_CACHE_IMPLEMENTATION_PLAN.md  DISK_CACHE_IMPLEMENTATION_REVISED.md  DUCKDB_MIGRATION_PLAN.md  FIX_CURTAILMENT_COLUMNS.md  FIX_PRICE_TABLE_PERIODS.md  FIX_RENEWABLE_PERCENTAGE.md  FIX_RESOLUTION_DETECTION.md  FIX_REVENUE_FORMULAS.md  GENERATION_OVERVIEW_REFACTOR_PLAN.md  LOADING_INDICATORS_IMPLEMENTED.md  LOADING_SCREEN_HANG_FIX.md  LOESS_IMPLEMENTATION.md  LOESS_ONLY_SMOOTHING.md  MIDNIGHT_BUG_FIX_SUMMARY.md  MIDNIGHT_ROLLOVER_BUG_PROMPT.md  MIGRATION_RESULTS.md  MIGRATION_STATUS.md  PENETRATION_TAB_FIX.md  PENETRATION_TAB_IMPLEMENTATION.md  (+220 more)
.claude/: settings.local.json
docs/: 5_year_memory_analysis.md  ANNUALISATION_FIX.md  BASELINE_PERFORMANCE_REPORT.md  CACHING_IMPLEMENTATION_PLAN.md  CLAUDE_DASHBOARD.md  CLAUDE_MOVE.md  DASHBOARD_OPTIMIZATION_FINAL_PLAN.md  DEFER_LOAD_OPTIMIZATION_RESULTS.md  FINAL_MIGRATION_SUMMARY.md  GENERATION_DASHBOARD_OPTIMIZATION.md  GENERATION_DASHBOARD_REFACTOR_PLAN.md  HYBRID_DUCKDB_IMPLEMENTATION.md  ISSUES.md  LAZY_LOADING_IMPLEMENTATION_SUMMARY.md  MIGRATION_STATUS_SUMMARY.md  MULTIUSER_TEST_RESULTS.md  NEM_DASH_MIGRATION_COMPLETE.md  NEM_dash_contents.md  OPTIMIZATION_RESULTS.md  PANEL_CACHE_IMPLEMENTATION_SUMMARY.md  PN_CACHE_IMPLEMENTATION_PLAN.md  PN_CACHE_MEMORY_ANALYSIS.md  PRICE_ANALYSIS_UI_FIXES.md  PRICE_COMPONENT_DATE_ISSUE.md  ROOFTOP_DATA_ISSUE.md  STARTUP_OPTIMIZATION_NOTES.md  STARTUP_OPTIMIZATION_PLAN.md  STATION_ANALYSIS_REFACTOR_SUMMARY.md  TAB_RENAMING_COMPLETE.md  WEBSOCKET_DIAGNOSIS_GUIDE.md  alerts.md  alerts_plugin_architecture.md  architecture.md  architecture.mermaid  claude_performance.md  complete_startup_profile_20250721_224330.json  responsive_migration.md
load_test/: run.py
scripts/: add_caching_to_gen_dash.py  check_gen_info.py  check_missing_data.py  check_rooftop_duckdb.py  debug_duid_mapping.py  diagnose_memory.py  enhanced_smart_cache_example.py  manage_duid_exceptions.py  profile_dashboard_init.py  profile_full_startup.py  profile_price_loading.py  station_search_patch.py  test_email.py  verify_fix.py  verify_vre_calculations.py
tests/: test_axis_scaling.py  test_combined_migration.py  test_complete_migration.py  test_daily_summary.py  test_daily_summary_browser.py  test_daily_summary_complete.py  test_daily_summary_final.py  test_daily_summary_fixed.py  test_daily_summary_visual.py  test_dashboard_performance.py  test_dashboard_with_cache.py  test_data_integration.py  test_data_service.py  test_date_fix_complete.py  test_defer_load_isolation.py  test_duckdb_tables.py  test_evening_peak_tab.py  test_fuel_weighted_prices.py  test_full_dashboard_mimic.py  test_gauge_data.py  test_generation_adapter.py  test_generation_adapter_duckdb.py  test_generation_dashboard_refactor.py  test_hvplot_performance.py  (+46 more)
(+254 files in other folders)
